// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DeleteGroupedObjectButton behavior Click on button, conditional modal, should be displayed 1`] = `
<div
  aria-label="Delete item"
  aria-modal="true"
  class="ReactModal__Content react-modal"
  role="dialog"
  tabindex="-1"
>
  <div>
    <div
      class="center"
    >
      <markdown
        remarkplugins="remark-gfm,[object Object]"
      >
        Delete item
      </markdown>
    </div>
    <markdown
      class="confirm-popup"
      remarkplugins="remark-gfm,[object Object]"
    >
      Are you sure you want to delete this item?
    </markdown>
    <div
      class="tr__form-buttons-container _center"
    >
      <div
        class="center"
      >
        <button
          class="button grey"
          type="button"
        >
          Cancel
        </button>
      </div>
      <div
        class="center"
      >
        <button
          class="button blue"
          type="button"
        >
          Confirm
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DeleteGroupedObjectButton behavior Click on button, confirm modal, cancel 1`] = `
<div
  aria-label="Delete item"
  aria-modal="true"
  class="ReactModal__Content react-modal"
  role="dialog"
  tabindex="-1"
>
  <div>
    <div
      class="center"
    >
      <markdown
        remarkplugins="remark-gfm,[object Object]"
      >
        Delete item
      </markdown>
    </div>
    <markdown
      class="confirm-popup"
      remarkplugins="remark-gfm,[object Object]"
    >
      Are you sure you want to delete this item?
    </markdown>
    <div
      class="tr__form-buttons-container _center"
    >
      <div
        class="center"
      >
        <button
          class="button grey"
          type="button"
        >
          Cancel
        </button>
      </div>
      <div
        class="center"
      >
        <button
          class="button blue"
          type="button"
        >
          Confirm
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DeleteGroupedObjectButton behavior Click on button, confirm modal, confirm 1`] = `
<div
  aria-label="Delete item"
  aria-modal="true"
  class="ReactModal__Content react-modal"
  role="dialog"
  tabindex="-1"
>
  <div>
    <div
      class="center"
    >
      <markdown
        remarkplugins="remark-gfm,[object Object]"
      >
        Delete item
      </markdown>
    </div>
    <markdown
      class="confirm-popup"
      remarkplugins="remark-gfm,[object Object]"
    >
      Are you sure you want to delete this item?
    </markdown>
    <div
      class="tr__form-buttons-container _center"
    >
      <div
        class="center"
      >
        <button
          class="button grey"
          type="button"
        >
          Cancel
        </button>
      </div>
      <div
        class="center"
      >
        <button
          class="button blue"
          type="button"
        >
          Confirm
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DeleteGroupedObjectButton layout: Display is false Render widget 1`] = `<div />`;

exports[`DeleteGroupedObjectButton layout: Display with custom label Render widget 1`] = `
<div>
  <div
    class="center"
  >
    <button
      class="button red small"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-trash-can faIconLeft"
        data-icon="trash-can"
        data-prefix="fas"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M136.7 5.9C141.1-7.2 153.3-16 167.1-16l113.9 0c13.8 0 26 8.8 30.4 21.9L320 32 416 32c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 96C14.3 96 0 81.7 0 64S14.3 32 32 32l96 0 8.7-26.1zM32 144l384 0 0 304c0 35.3-28.7 64-64 64L96 512c-35.3 0-64-28.7-64-64l0-304zm88 64c-13.3 0-24 10.7-24 24l0 192c0 13.3 10.7 24 24 24s24-10.7 24-24l0-192c0-13.3-10.7-24-24-24zm104 0c-13.3 0-24 10.7-24 24l0 192c0 13.3 10.7 24 24 24s24-10.7 24-24l0-192c0-13.3-10.7-24-24-24zm104 0c-13.3 0-24 10.7-24 24l0 192c0 13.3 10.7 24 24 24s24-10.7 24-24l0-192c0-13.3-10.7-24-24-24z"
          fill="currentColor"
        />
      </svg>
      Delete for unit test
    </button>
  </div>
</div>
`;

exports[`DeleteGroupedObjectButton layout: Display with default label Render widget 1`] = `
<div>
  <div
    class="center"
  >
    <button
      class="button red small"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-trash-can faIconLeft"
        data-icon="trash-can"
        data-prefix="fas"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M136.7 5.9C141.1-7.2 153.3-16 167.1-16l113.9 0c13.8 0 26 8.8 30.4 21.9L320 32 416 32c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 96C14.3 96 0 81.7 0 64S14.3 32 32 32l96 0 8.7-26.1zM32 144l384 0 0 304c0 35.3-28.7 64-64 64L96 512c-35.3 0-64-28.7-64-64l0-304zm88 64c-13.3 0-24 10.7-24 24l0 192c0 13.3 10.7 24 24 24s24-10.7 24-24l0-192c0-13.3-10.7-24-24-24zm104 0c-13.3 0-24 10.7-24 24l0 192c0 13.3 10.7 24 24 24s24-10.7 24-24l0-192c0-13.3-10.7-24-24-24zm104 0c-13.3 0-24 10.7-24 24l0 192c0 13.3 10.7 24 24 24s24-10.7 24-24l0-192c0-13.3-10.7-24-24-24z"
          fill="currentColor"
        />
      </svg>
      myGroup.deleteThisGroupedObject
    </button>
  </div>
</div>
`;
